K8S/uber-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uber-deployment
  namespace: uber
  labels:
    app: uber
    auther: Tawfeeq
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: uber-app
  template:
    metadata:
      labels:
        app: uber-app
    spec:
      conatiners:
        - name: uberapp
          image: tawfeeq421/uber
          ports:
            - name: uber-port
              containerPort: 3000
          resources:
            requests:
              cpu: 150m
              memory: 120Mi
            limits:
              cpu: 250m
              memory: 240Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
