K8S/uber-service.yml
apiVersion: v1
kind: Service
metadata:
  name: uber-sesrvice
  namespace: uber
  labels:
    auther: Tawfeeq
spec:
  type: ClusterIP
  ports:
    - targetPort: uber-port
      port: 80
      protocol: TCP
  selector:
    app: uber-app
